--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -1,6 +1,6 @@
 .project{
-    margin: 60px 0px;
     margin-left: 130px;
+    margin-top: 60px 0px;
 }
 .project hr{
     color: #138781;
@@ -25,11 +25,11 @@
     padding: 5px 10px;
     font-size: 14px;
 }
-.card img{
+.project .card img{
    height: 150px;
    width: 100%; 
 }
-.card-detail-badge{
+.projects .card-detail-badge{
     background-color: #e0b50f;
     text-align: center;
     border-radius: 30px 30px 30px 30px;
@@ -41,13 +41,13 @@
     display: inline-block;
     margin-left: 5px;
 }
-.card:hover{
+.project .card:hover{
     background-color: white;
     border-radius: 4px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     transition: all 0.5s ease;
 }
-.card-image-overly{
+.projects .card-image-overly{
     font-size: 20px;
 }
 .ad-btn{
